INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR} )

ADD_EXECUTABLE(itype itype.c)

IF(SERVICE_CACHE)
	ADD_EXECUTABLE(itool itool.c)
	TARGET_LINK_LIBRARIES(itool initng)
ENDIF(SERVICE_CACHE)

IF(INSTALL_AS_INIT)
	ADD_EXECUTABLE(mountpoint mountpoint.c)
	INSTALL_TARGETS(${SBIN_INSTALL_DIR} mountpoint)

	ADD_EXECUTABLE(sulogin sulogin.c)
	TARGET_LINK_LIBRARIES(sulogin crypt)
	INSTALL_TARGETS(${SBIN_INSTALL_DIR} sulogin)
ENDIF(INSTALL_AS_INIT)
